--- a/vignettes/dlstats.Rmd
+++ b/vignettes/dlstats.Rmd
@@ -35,7 +35,7 @@ library("dlstats")
 
 This `R` package queries download stats of `R` packages.
 
-+ For [CRAN](https://cran.r-project.org/) packages, it queries from [RStudio download logs](https://cran-logs.rstudio.com/).
++ For [CRAN](https://cran.r-project.org/) packages, it queries from [RStudio download logs](http://cran-logs.rstudio.com/).
 
 + For [Bioconductor](https://bioconductor.org/) packages, it queries from [Bioconductor download stats](https://bioconductor.org/packages/stats/).
 
@@ -46,10 +46,10 @@ This `R` package queries download stats of `R` packages.
 library("ggplot2")
 library("dlstats")
 
-x <- cran_stats(c("dlstats", "emojifont", "rvcheck"))
+x <- cran_stats(c("emojifont", "ggimage", "hexSticker", "rvcheck"))
 head(x)
 ggplot(x, aes(end, downloads, group=package, color=package)) +
-    geom_line() + geom_label(aes(label=downloads))
+    geom_line() + geom_point(aes(shape=package))
 ```
 
 
@@ -62,7 +62,6 @@ head(y)
 
 ggplot(y, aes(end, Nb_of_downloads, group=package, color=package)) +
     geom_line() + geom_point(aes(shape=package))
-
 ```
 
 ```{r fig.width=10}
