--- a/vignettes/dlstats.Rmd
+++ b/vignettes/dlstats.Rmd
@@ -51,9 +51,11 @@ library("dlstats")
 x <- cran_stats(c("emojifont", "ggimage", "hexSticker", "rvcheck"))
 
 if (!is.null(x)) {
-   head(x)
+   print(head(x))
    ggplot(x, aes(end, downloads, group=package, color=package)) +
-       geom_line() + geom_point(aes(shape=package))
+       geom_line() + 
+       geom_point() +
+       scale_y_log10()
 }
 ```
 
